--- a/src/sass/layout/navbar.sass
+++ b/src/sass/layout/navbar.sass
@@ -4,6 +4,8 @@ header
 	z-index: 2
 	padding: .5rem .5rem 0 .5rem
 	top: 0
+	position: fixed
+	left: 0
 	
 nav
 	display: flex
